<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.example.roy.habittrainer.CreateHabitActivity">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_habit_hint_title" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_habit_hint_description"
        android:inputType="textMultiLine"
        android:lines="2" />

    <Button
        android:id="@+id/btn_choose_image"
        android:text="@string/button_text_choose_image"
        android:onClick="chooseImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <ImageView
        android:id="@+id/iv_image_preview"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/create_habit_content_description"/>
    
    <Button
        android:id="@+id/btn_save"
        android:text="@string/button_text_save_habit"
        android:onClick="saveHabit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_error"
        android:visibility="invisible"
        android:textColor="#e53935"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
